--- a/.github/workflows/test-deploy-fork.yml
+++ b/.github/workflows/test-deploy-fork.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   prepare_jobs:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: |
       github.event.workflow_run.event == 'pull_request' &&
       github.event.workflow_run.conclusion == 'success'
@@ -45,7 +45,7 @@ jobs:
             });
 
   next_js_analyze:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: ['prepare_jobs']
     env:
       PR_NUMBER: ${{ needs.prepare_jobs.outputs.pr_number }}
@@ -59,7 +59,7 @@ jobs:
           PULL_REQUEST_NUMBER: '${{ env.PR_NUMBER }}'
 
   cypress_smoke_v2:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: ['prepare_jobs']
     strategy:
       fail-fast: false
@@ -79,7 +79,7 @@ jobs:
           YARN_TEST_COMMAND: npx cypress-repeat run -n 2 --rerun-failed-only --config-file ./cypress/configs/v2-markets/${{ matrix.market }}-v2-smoke.config.ts
 
   cypress_smoke_v3:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: ['prepare_jobs']
     strategy:
       fail-fast: false
@@ -104,7 +104,7 @@ jobs:
           YARN_TEST_COMMAND: npx cypress-repeat run -n 2 --rerun-failed-only --config-file ./cypress/configs/v3-markets/${{ matrix.market }}-v3-smoke.config.ts
 
   deploy_fork:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs:
       - prepare_jobs
       - cypress_smoke_v2
@@ -183,7 +183,7 @@ jobs:
             });
 
   cypress_full_v2:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: ['deploy_fork']
     strategy:
       fail-fast: false
@@ -203,7 +203,7 @@ jobs:
           YARN_TEST_COMMAND: npx cypress-repeat run -n 2 --rerun-failed-only --config-file ./cypress/configs/v2-markets/${{ matrix.market }}-v2-full.config.ts
 
   cypress_full_v3:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: ['deploy_fork']
     strategy:
       fail-fast: false
@@ -225,7 +225,7 @@ jobs:
           YARN_TEST_COMMAND: npx cypress-repeat run -n 2 --rerun-failed-only --config-file ./cypress/configs/v3-markets/${{ matrix.market }}-v3-full.config.ts
 
   cypress_app_functionality:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: ['deploy_fork']
     strategy:
       fail-fast: false
@@ -247,7 +247,7 @@ jobs:
           YARN_TEST_COMMAND: npx cypress-repeat run -n 2 --rerun-failed-only --config-file ./cypress/configs/${{ matrix.scoupe }}.config.ts
 
   notify_failure:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: failure()
     needs:
       - prepare_jobs
@@ -277,7 +277,7 @@ jobs:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   notify_success:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     if: success()
     needs:
       - prepare_jobs
