--- a/.github/workflows/crowdin-download.yml
+++ b/.github/workflows/crowdin-download.yml
@@ -12,7 +12,8 @@ on:
 jobs:
   download-from-crowdin:
     name: Download sources from Crowdin
-    runs-on: self-hosted
+    runs-on:
+        group: larger
 
     steps:
       - name: Checkout
