--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -12,7 +12,8 @@ permissions:
 
 jobs:
   dependency-review:
-    runs-on: self-hosted
+    runs-on:
+        group: larger
     steps:
       - name: 'Checkout Repository'
         uses: actions/checkout@v3
