--- a/.github/workflows/update-cache.yml
+++ b/.github/workflows/update-cache.yml
@@ -12,7 +12,8 @@ on:
 
 jobs:
   cache-refresh:
-    runs-on: self-hosted
+    runs-on:
+        group: larger
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3.0.2
         with:
